# panel

./: .gitmodules  CMakeLists.txt  README.md  bindings.cpp  build.sh  index.html  main.cpp  panel.h
.github/workflows/: build.yml  cmake.yml
bindings/: build.sh
client/: geometry.js  index.html  style.css
client/components/: my-footer.js  my-head.js  my-header.js
panel-js/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/panel/: panel.h
test/: CMakeLists.txt  approval_tests.cpp  main.cpp
test/results/: approval_tests.panel_tests.INPR1.approved.txt
